--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <title>AlgebraHelper</title>
+    <title>ProdigyGames</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -46,7 +46,7 @@
     
     <!-- Header -->
     <header class="w3-container w3-black w3-center" style="padding:128px 16px">
-      <h1 class="w3-margin w3-jumbo">AlgebraHelper</h1>
+      <h1 class="w3-margin w3-jumbo">ProdigyGames</h1>
       <p class="w3-xlarge">Best place to play your favorite games and apps.</p>
     </header>
     
