--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <title>AlgebraHelper</title>
+    <title>ProdigyGames</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -49,7 +49,7 @@
       <div class="w3-content">
         <div class="w3-twothird">
           <h1>Q/A</h1>
-          <h5 class="w3-padding-32">Q: What is AlgebraHelper?<br>A: AlgebraHelper is a great way to use and play all of the most popular games and websites on the internet.</h5>
+          <h5 class="w3-padding-32">Q: What is ProdigyGames?<br>A: ProdigyGames is a great way to use and play all of the most popular games and websites on the internet.</h5>
           <h5 class="w3-padding-32">Q: How much does it cost to maintain the website?<br>A: I'm not going into specifics, but right now, not much. Later down the road it might start to cost more though.</h5>
           <h5 class="w3-padding-32">Q: Can I use this at school or work?<br>A: I highly recommend that you do not use this as a way to play games at school, this is meant so that you can play all your games in one area. Use this tool with caution if you are breaking any rules of any kind set in place by your school or work.</h5>
         </div>
